fix(video): change to return VideShortInfoDTO with pagination
- return only videos with status PUBLIC because it is open endpoint(it is for everyone)

Signed-off-by: dostonbekqosimov <dostonqosimiy19@gmail.com>